<resources>
    <string name="app_name">LaurenceCuffeAssignment2</string>
    <string name="implicit_intent_open_camera">Implicit Intent: Open Camera</string>
    <string name="blankBox">blank</string>
    <string name="explicit_intent_call_an_activity">Explicit intent: Call an activity</string>
    <string name="send">Send</string>
    <string name="implicit_intent_view_picture">Implicit Intent: View Picture</string>
</resources>